@@ -1,3 +1,9 @@
+serd (0.30.9) unstable;
+
+  * Fix SERD_DISABLE_DEPRECATED
+
+ -- David Robillard <d@drobilla.net>  Sat, 09 Jan 2021 17:08:32 +0000
+
 serd (0.30.8) stable;
 
   * Deprecate serd_uri_to_path()
